--- a/src/index.css
+++ b/src/index.css
@@ -197,5 +197,35 @@ button.secondary {
 
 }
 
-/* Buttons */
+/* butterfly */
+.butterfly {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: smooth-flight 3s infinite ease-in-out;
+}
+
+@keyframes smooth-flight {
+  0% {
+    transform: translate(0, 0) rotate(0);
+  }
+  25% {
+    transform: translate(50px, -30px) rotate(15deg);
+  }
+  50% {
+    transform: translate(100px, 50px) rotate(-15deg);
+  }
+  75% {
+    transform: translate(-50px, 30px) rotate(10deg);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0);
+  }
+}
+
+.butterfly-svg {
+  transition: transform 2s ease-in-out;
+}
+
 
