--- a/src/index.css
+++ b/src/index.css
@@ -343,3 +343,53 @@ button.secondary {
   left: 40%;
   transform: rotate(45deg);
 }
+
+
+
+
+.containerrs {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 24px;
+  margin: 270px 0;
+  height: 2040px;
+  align-items: center;
+}
+
+.cardd {
+  width: 80%;
+  margin: 0 20px;
+  box-sizing: border-box;
+  background: #dedede;
+  min-height: 400px;
+  border-radius: 32px;
+  position: sticky;
+  
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  font-family : 'system-ui', sans-serif;
+  font-size: 90px;
+  font-weight: medium;
+  color: #FFF;
+}
+
+.one {
+  top: 50px;
+  background: #6b04fd;
+}
+.two {
+  top: 80px;
+  background: #5a03d5;
+}
+.three {
+  top: 110px;
+  background: #4b05ad;
+}
+
+.four {
+  top: 140px;
+  background: #2c0076;
+}
